# grounding-harness

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  anthropic_api.py  claude_code.py  confluence.py  extractive_gen.py  fakes.py  markdown.py  model_seams.py  youtube.py
examples/: demo.py  ground_markdown.py
grounding/: __init__.py  contract.py  loop.py  model.py  seams.py  verify.py
tests/: planted.py  test_claude_code.py  test_contract.py  test_grounding.py  test_markdown.py
tests/fixtures/: sample.md
